# Cloudberry-Storage-Any-Modal

./: .gitignore  ModelRegistry.py  README.md  cloudberry_storage.proto  controller.py  pyproject.toml  requirements.txt  run_cloudberry.sh  test.py
proto/: cloudberry_storage.proto  one_peace_service.proto
scripts/: generate_proto.py
src/: cloudberry_storage.py  model_registry.py
src/embedders/: one_peace_client.py  one_peace_embedder.py  sbert_embedder.py
tests/: test.py
